# libdsc

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/list/: CMakeLists.txt  singly-ll.c
include/common/: debug.h  utils.h
include/list/: list.h
src/: CMakeLists.txt  utils.c
src/list/: CMakeLists.txt  list-private.h  singly-linked-list.c
